--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 
         <h1><strong>Robin Sylvester</strong></h1>
-        <p><em>People's <strong>Champion</strong></em></p>
+        <p><em>rifle <strong>Knight</strong></em></p>
         <ul>
           <li>Simplicity is the key to happiness</li>
           <li>You can’t become the best without first being the worst</li>
